LIB-55 Fix pager button bottom whitespace

--- a/custom/themes/lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/lib_unb_ca/src/scss/style.scss
@@ -22,7 +22,7 @@ a {
 
 /* Link hover effect (not in button/chosen/nav contexts) */
 #main {
-  a:not(.link-no-hover):not(.btn):not(.button):not(.chosen-single):not(.dropdown-item):not(.nav-link) {
+  a:not(.link-no-hover):not(.btn):not(.button):not(.chosen-single):not(.dropdown-item):not(.nav-link):not(.page-link) {
     padding-bottom: 1px;
 
     &:hover {
